# kz-graduation-project-backend

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/douban/: admin.py  crawl.py  models.py  serializers.py  urls.py  views.py
apps/douban/migrations/: 0001_initial.py  0002_auto_20210521_1732.py
config/: settings.py  urls.py  wsgi.py
crawler/crawler/: items.py  middlewares.py  pipelines.py  settings.py  userinfo.json
crawler/crawler/spiders/: douban_book.py  douban_comment.py  douban_movie.py
crawler/dbs/: default.db
data/: douban_movie_1292052.json  douban_movie_25728006.json  stopwords.txt
test/: jieba_test.py  scrapyd_test.py  snownlp_test.py
user/: urls.py  utils.py  views.py
users/: serializers.py  urls.py  views.py
